feat(api): add file_alias field to file download route
