# docs/swagger.json
@@ -3,11 +3,11 @@
     "info": {
         "description": "This is an official Golang API documentation for NovaApp.",
         "title": "Golang API",
-        "termsOfService": "https://novaardiansyah.my.id/live/nova-app/terms-of-service",
+        "termsOfService": "https://novaardiansyah.id/live/nova-app/terms-of-service",
         "contact": {
             "name": "API Support",
-            "url": "https://novaardiansyah.my.id",
-            "email": "support@novadev.my.id"
+            "url": "https://novaardiansyah.id",
+            "email": "support@novaardiansyah.id"
         },
         "license": {
             "name": "MIT License",
@@ -707,6 +707,9 @@
                     "type": "string"
                 },
                 "download_url": {
+                    "type": "string"
+                },
+                "file_alias": {
                     "type": "string"
                 },
                 "file_name": {
